United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7005241 C1: SEGV in java.util.concurrent.LinkedTransferQueue.xfer() with compressed oops
7005241 : C1: SEGV in java.util.concurrent.LinkedTransferQueue.xfer() with compressed oops

Details
Type:
Bug
Submit Date:
2010-12-07
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
A bunch of tests failed in nightlies with tiered:

java/util/Collections/RacingCollections.java
java/util/concurrent/BlockingQueue/MultipleProducersSingleConsumerLoops.java
java/util/concurrent/BlockingQueue/OfferDrainToLoops.java
java/util/concurrent/BlockingQueue/ProducerConsumerLoops.java
java/util/concurrent/BlockingQueue/SingleProducerMultipleConsumerLoops.java
java/util/concurrent/ConcurrentQueues/ConcurrentQueueLoops.java
java/util/concurrent/ConcurrentQueues/GCRetention.java
java/util/concurrent/ConcurrentQueues/OfferRemoveLoops.java
java/util/concurrent/ConcurrentQueues/RemovePollRace.java

With:
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0xfffffd7ff604cb3e, pid=8811, tid=202
#
# JRE version: 7.0
# Java VM: OpenJDK 64-Bit Server VM (20.0-b03-201012032355.jrose.hotspot-fastdebug mixed mode solaris-amd64 compressed oops)
# Problematic frame:
# J  java.util.concurrent.LinkedTransferQueue.xfer(Ljava/lang/Object;ZIJ)Ljava/lang/Object;
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/ec8c74742417
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/ec8c74742417
                                     
2010-12-16
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/ec8c74742417
                                     
2010-12-08
EVALUATION

Implementation of the CAS primitive for x64 compressed oops is incorrect. It kills rscratch2 register (r11), which is allocatable in C1.
                                     
2010-12-07



Hardware and Software, Engineered to Work Together